# barber_service

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_12_19_0121-e77d56ccf254_create_admin_table.py  2025_12_20_0141-cd2222b6f750_first_migration.py  2025_12_28_2258-a71ad9d209da_.py  2026_01_08_1429-244119d9d777_rename_appointments_id_to_assistance_id.py
app/auth/: exc.py  token.py  universal_jwt.py
app/core/: config.py
app/db/: database.py
app/models/: __init__.py  admin.py  appointments.py  assistance.py  barbers.py  base.py  services.py  user.py
app/repositories/: admin.py  appointments.py  assistance.py  barbers.py  user.py
app/routers/: api.py
app/routers/v1/: admin.py  appointments.py  assistance.py  barbers.py  user.py
app/schemas/: admin.py  appointments.py  assistance.py  barbers.py  jwt.py  user.py
app/schemas/enum/: appointments.py  barbers.py
app/services/: admin.py  appointments.py  assistance.py  barbers.py  user.py
app/services/exc/: __init__.py  appointments.py  base.py  user.py
app/utils/: security.py
